Add Clocks test target with comprehensive test coverage
- Add Clocks Tests target to Package.swift
- Add tests for Time.Clock.Test, Immediate, Continuous, Suspending, Any, Unimplemented
- Add tests for Time.Clock.Timer.Sequence
- Update .swiftlint.yml for nesting, large_tuple, and identifier exclusions
- Fix Time.Clock.Test.sleep bug where deadline == now blocked forever

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -62,6 +62,20 @@ identifier_name:
     - URL
     - to
     - db
+    - a
+    - b
+    - i
+
+# Nesting settings - allow Time.Clock.X.Instant pattern
+nesting:
+  type_level:
+    warning: 3
+    error: 4
+
+# Large tuple settings - allow clock suspension tracking
+large_tuple:
+  warning: 4
+  error: 5
 
 # Type name settings - allow RFC_XXXX pattern
 type_name:
