Sync .gitignore to canonical with marker-based sections

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
+# ========== CANONICAL (auto-synced, do not edit) ==========
+# Source: swift-institute
+# Sync: Scripts/sync-gitignore.sh or manual
+
 *~
+.DS_Store
 
 Package.resolved
 DerivedData/
@@ -12,13 +17,38 @@ Thumbs.db
 !/.swift-format
 !/.swiftformat
 !/.swiftlint.yml
+!/.swiftlint/
 
-# Documentation (opt-in for top-level .md files only)
-/*.md
+# Top-level entries (opt-in only)
+# First ignore all, then whitelist specific folders and files
+/*
+!/Sources/
+!/Tests/
+!/.github/
+!/Package.swift
+!/LICENSE.md
+
+# Documentation (opt-in for whitelisted .md files and .docc catalogs only)
+# Blocks all .md files by default to prevent AI-generated content from being committed
+*.md
 !README.md
 !LICENSE.md
 !CHANGELOG.md
 !CONTRIBUTING.md
 !CODE_OF_CONDUCT.md
 !SECURITY.md
+!**/*.docc/**/*.md
+
+*.pdf
+
+# SwiftLint
+**/.swiftlint/RemoteConfigCache
+
+# Swift Package Manager
 .build/
+.swiftpm/
+
+# ========== END CANONICAL ==========
+
+# ========== LOCAL OVERRIDES ==========
+# Package-specific rules below (preserved during sync)
